--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Getting Started</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
   </head>
   <body>
     <div class="main-area">
       <div class="game-area">
+        <canvas id="game-canvas"></canvas>
         <script src="dist/main.js"></script>
       </div>
     </div>
