--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/css/reset.css">
+    <link rel="stylesheet" href="dist/css/style.css">
   </head>
   <body>
     <div class="main-area">
       <div class="game-area">
-        <canvas id="game-canvas"></canvas>
-        <script src="dist/main.js"></script>
+        <div class="game">
+          <canvas id="game-canvas"></canvas>
+          <script src="dist/main.js"></script>
+          <button id="clear-game-pause" class="pause-game-button game-button-styles">Pause</button>
+          <button id="clear-game-play" class="play-game-button game-button-styles">Play</button>
+          <button class="game-start-button">Start!</button>
+        </div>
+        <div class="game-over-popup1 game-over-popup" id="clear-game-over-popup">
+          <div class="game-over-form">
+            <h1>Game Over</h1>
+            <button id="restart-button">Play Again!</button>
+          </div>
+        </div>
+      </div>
+      <div class="game-instruction">
+
+      </div>
+      <div class="winner-popup">
+        <div class="winner-form">
+
+        </div>
       </div>
     </div>
   </body>
