change social links to open a new tab

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
           <div class="text-social">
             <h2>Created by Henry Han</h2>
-            <a href="https://github.com/henryhannn"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/henryhannn/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/henryhannn" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/henryhannn/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </div>
