add audio html tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="https://kit.fontawesome.com/7275b6aa0a.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="music-area">
+      <div class="music">
+        <audio id="music" src=""></audio>
+        <p>Music:</p>
+        <button id="play-music" class="music-button"><i class="fas fa-volume-mute"></i></button>
+        <button id="pause-music" class="clear-music-button music-button"><i class="fas fa-volume-up"></i></button>
+      </div>
+    </div>
     <div class="main-area">
       <div class="game-area">
         <div class="game-title">
