--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body>
     <div class="music-area">
       <div class="music">
-        <audio id="music" src=""></audio>
-        <p>Music:</p>
-        <button id="play-music" class="music-button"><i class="fas fa-volume-mute"></i></button>
-        <button id="pause-music" class="clear-music-button music-button"><i class="fas fa-volume-up"></i></button>
+        <audio id="music" src="https://cyber-runner.s3-us-west-1.amazonaws.com/audio.mp3"></audio>
+        <button id="play" class="music-button"><i class="far fa-play-circle"></i></button>
+        <button id="pause" class="clear-music-button music-button"><i class="far fa-stop-circle"></i></button>
       </div>
     </div>
     <div class="main-area">
